<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="vertical"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@color/Platinum">

    <ImageButton
        android:id="@+id/bottom_sheet_btn_close"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="false"
        android:contentDescription="@string/close"
        android:background="@drawable/background_transparent_text_view"
        android:backgroundTint="@color/chestnut"
        android:src="@drawable/ic_close"
        />

    <Button
        android:id="@+id/bottom_sheet_btn_save"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_sheet_editText"
        android:textAllCaps="false"
        android:text="@string/save"
        android:textSize="15sp"
        android:drawableStart="@drawable/ic_save"
        android:padding="5dp"
        android:background="@drawable/background_transparent_text_view"
        android:backgroundTint="@color/PickledBlueWood"
        android:textColor="@color/SmokyWhite"/>

    <CheckBox
        android:id="@+id/bottom_sheet_checkbox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bottom_sheet_editText"
        app:layout_constraintBottom_toTopOf="@id/bottom_sheet_textViewDate"
        />
  <EditText
      android:id="@+id/bottom_sheet_editText"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:layout_margin="5dp"
      android:hint="@string/input_name"
      app:layout_constraintTop_toBottomOf="@id/bottom_sheet_btn_save"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/bottom_sheet_checkbox"
      app:layout_constraintBottom_toTopOf="@id/bottom_sheet_textViewDate"
      android:inputType="text"
      android:textSize="20sp"
      android:drawableStart="@drawable/ic_edit"
      android:background="@drawable/background_edit_text"
      android:drawablePadding="5dp"
      android:padding="10dp"
      android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/bottom_sheet_textViewDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_editText"
        app:layout_constraintBottom_toTopOf="@+id/bottom_sheet_textViewColor"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:padding="11dp"
        android:drawablePadding="25dp"
        android:textSize="17sp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:hint="@string/choose_date"
        app:drawableStartCompat="@drawable/ic_calendar" />

    <TextView
        android:id="@+id/bottom_sheet_textViewColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_textViewDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:padding="11dp"
        android:drawablePadding="25dp"
        android:textSize="17sp"
        android:hint="@string/choose_color"
        android:textColor="@color/black"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_color" />

    <EditText
        android:id="@+id/bottom_sheet_et_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_textViewColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:inputType="textMultiLine"
        android:hint="@string/add_note"
        android:gravity="top"
        android:padding="12dp"
        android:layout_margin="5dp"
        android:backgroundTint="@color/SmokyWhite"
        android:importantForAutofill="no"
        android:background="@drawable/background_edit_text"/>



</androidx.constraintlayout.widget.ConstraintLayout>