<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="300dp"
    android:orientation="vertical"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@color/Platinum">

    <ImageButton
        android:id="@+id/bottom_sheet_category_btn_close"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_close"
        android:backgroundTint="@color/chestnut"
        android:background="@drawable/background_white_text_view"
        android:contentDescription="@string/close" />

    <Button
        android:id="@+id/bottom_sheet_category_btn_save"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:text="@string/save"
        android:textSize="15sp"
        android:backgroundTint="@color/PickledBlueWood"
        android:background="@drawable/background_white_text_view"
        android:drawableStart="@drawable/ic_save"
        android:textColor="@color/SmokyWhite"/>

    <TextView
        android:id="@+id/bottom_sheet_category_textView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:hint="Цвет"
        android:textSize="16sp"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_sheet_category_editText"
        android:background="@drawable/background_white_text_view"
        android:foreground="@drawable/background_transparent_text_view"
        app:drawableStartCompat="@drawable/ic_color" />

    <EditText
        android:id="@+id/bottom_sheet_category_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/input_name"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_category_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_edit"
        android:background="@drawable/background_edit_text"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:importantForAutofill="no"/>

</androidx.constraintlayout.widget.ConstraintLayout>